Linked all pages

--- a/make/pdesign.html
+++ b/make/pdesign.html
@@ -702,12 +702,12 @@
         <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <a href="../../hire.html" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 <br><br><br><br>
             </div>
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <a href="../../blog.html" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 <br><br><br><br>
             </div>
             <div class="clearfix"></div>
