--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         	<div class="container topnav">
             	<!-- Brand and toggle get grouped for better mobile display -->
             	<div class="navbar-header">
-                	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                	<button type="button" class="navbar-toggle toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     	<span class="sr-only">Toggle navigation</span>
                     	<span class="icon-bar"></span>
                     	<span class="icon-bar"></span>
@@ -235,9 +235,9 @@
                                                 <div class="col-sm-4">
                                                     <ul class="multi-column-dropdown">
                                                         <li class="dropdown-header text-left">Ordering</li>
-                                                        <li><a href="#">Shipping Information</a></li>
-                                                        <li><a href="#">Order Status</a></li>
-                                                        <li><a href="#">Material Shipping Status</a></li>
+                                                        <li><a href="checkout/payment.html">Shipping Information</a></li>
+                                                        <li><a href="checkout/payment.html">Order Status</a></li>
+                                                        <li><a href="checkout/payment.html">Material Shipping Status</a></li>
                                                     </ul>
                                                 </div>
                                             </div>  
