--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             		<ul class="nav navbar-nav navbar-left dropdown">
             			<li>
             				<a class="dropdown-toggle" type="button" data-toggle="dropdown" data-hover="dropdown">
-            					Shop 
+            					Shop
             					<span class="caret"></span>
             					<ul class="dropdown-menu">
     								<li><a href="shop.html">Shop All Categories</a></li>
@@ -204,7 +204,7 @@
                                                         <br>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
     								<li class="dropdown mega-dropdown">
@@ -240,7 +240,7 @@
                                                         <li><a href="checkout/payment.html">Material Shipping Status</a></li>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
                                     <li class="dropdown mega-dropdown">
@@ -401,7 +401,7 @@
         <!--Register-->
 
 
-        
+
 		<!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
@@ -439,7 +439,7 @@
         <p class="text-center">Whether you're an experienced 3D designer or just want to personalize a unique gift, Aakist gives you the tools to make exactly what you want</p>
     </div>
     <br><br><br>
-    
+
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -473,16 +473,16 @@
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div>
-                        <img class="img-responsive" src="Img/moz.png" alt="">   
+                        <img class="img-responsive" src="img/moz.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="hover ehover1">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Customizable</h2>
                             <button class="info"><a href="category/jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
             </div>
@@ -498,7 +498,7 @@
                         <div class="overlay">
                             <h2>Jewellery</h2>
                             <button class="info"><a href="category/jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
@@ -507,7 +507,7 @@
                         <div class="overlay">
                             <h2>Accessories</h2>
                             <button class="info"><a href="category/Accessories.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
 
@@ -517,7 +517,7 @@
                         <div class="overlay">
                             <h2>Games</h2>
                             <button class="info"><a href="category/Games.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
             </div>
@@ -533,7 +533,7 @@
                         <div class="overlay">
                             <h2>Art</h2>
                             <button class="info"><a href="category/Art.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -542,7 +542,7 @@
                         <div class="overlay">
                             <h2>Miniatures</h2>
                             <button class="info"><a href="category/Miniatures.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
-                        </div>         
+                        </div>
                     </div>
                 </div>
             </div>
@@ -778,5 +778,5 @@
         })
     </script>
 	</body>
-	
+
 </html>
