--- a/make.html
+++ b/make.html
@@ -48,7 +48,7 @@
                     <ul class="nav navbar-nav navbar-left dropdown">
                         <li>
                             <a class="dropdown-toggle" type="button" data-toggle="dropdown" data-hover="dropdown">
-                                Shop 
+                                Shop
                                 <span class="caret"></span>
                                 <ul class="dropdown-menu">
                                     <li><a href="shop.html">Shop All Categories</a></li>
@@ -204,7 +204,7 @@
                                                         <br>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
                                     <li class="dropdown mega-dropdown">
@@ -240,7 +240,7 @@
                                                         <li><a href="#">Material Shipping Status</a></li>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
                                     <li class="dropdown mega-dropdown">
@@ -406,20 +406,20 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Wedding</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                                </div>       
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Customizable</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -431,30 +431,30 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Jewellery</h2>
                                     <button class="info" data-toggle="modal" data-target="category/jewellery.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Accessories</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Accessories.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Games</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Games.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -466,20 +466,20 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download3.jpg" alt="">
+                                <img class="img-responsive" src="img/download3.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Art</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Art.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Your Model</h2>
                                     <button class="info" data-toggle="modal" data-target="make.html">Upload Your Own Model</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                     </span>
                                     <h4>
                                         <strong>Create</strong>
-                                    </h4>   
+                                    </h4>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
@@ -557,7 +557,7 @@
                 <div class="row no-gutter popup-gallery ">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/8.jpg" alt="">
+                            <img class="img-responsive" src="img/portfolio/thumbnails/8.jpg" alt="">
                             <div class="overlay">
                                 <h2>PRODUCT NAME</h2>
                                 <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
