--- a/shop.html
+++ b/shop.html
@@ -48,7 +48,7 @@
                     <ul class="nav navbar-nav navbar-left dropdown">
                         <li>
                             <a class="dropdown-toggle" type="button" data-toggle="dropdown" data-hover="dropdown">
-                                Shop 
+                                Shop
                                 <span class="caret"></span>
                                 <ul class="dropdown-menu">
                                     <li><a href="shop.html">Shop All Categories</a></li>
@@ -204,7 +204,7 @@
                                                         <br>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
                                     <li class="dropdown mega-dropdown">
@@ -240,7 +240,7 @@
                                                         <li><a href="#">Material Shipping Status</a></li>
                                                     </ul>
                                                 </div>
-                                            </div>  
+                                            </div>
                                         </ul>
                                     </li>
                                     <li role="separator" class="divider"></li>
@@ -394,20 +394,20 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Wedding</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                                </div>       
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Customizable</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -419,30 +419,30 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Jewellery</h2>
                                     <button class="info" data-toggle="modal" data-target="category/jewellery.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Accessories</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Accessories.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <img class="img-responsive" src="img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Games</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Games.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -454,20 +454,20 @@
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Art</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Art.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="hover ehover1">
-                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <img class="img-responsive" src="img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Miniatures</h2>
                                     <button class="info" data-toggle="modal" data-target="category/Miniatures.html">Shop Now</button>
-                                </div>         
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -484,7 +484,7 @@
             <div class="row">
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -493,7 +493,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -502,7 +502,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -511,7 +511,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -525,7 +525,7 @@
             <div class="row">
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                     <a href="item.html">Product Name</a>
@@ -534,7 +534,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -543,7 +543,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -552,7 +552,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -565,7 +565,7 @@
             <div class="row">
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -574,7 +574,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -583,7 +583,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
@@ -592,7 +592,7 @@
                 </div>
                 <div class="col-md-3 portfolio-item">
                     <a href="item.html">
-                        <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                        <img class="img-responsive" src="img/product.png" alt="">
                     </a>
                     <h4 class="text-center">
                         <a href="item.html">Product Name</a>
